fix double scrollbar on iframe

--- a/scss/_d-enhancements.scss
+++ b/scss/_d-enhancements.scss
@@ -458,7 +458,7 @@ section > ul{
 
 .embed-responsive-1by2 {
   -webkit-overflow-scrolling: touch;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   
   &::before {
     padding-top: percentage(2 / 1);
